# discord_readability

./: Dockerfile  docker-compose.yaml  logging.conf  main.py  pyproject.toml
.github/workflows/: push_ecr.yml
discord_readability/: schemas.py
spacy_readability/: __init__.py  cmudict-0.7b.txt
